force-app/main/default/objects/Partner_Referral__c/Partner_Referral__c.object-meta.xml
<CustomObject>
    <label>Partner Referral</label>
    <nameField>
        <label>Partner Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>