force-app/main/default/objects/Partner_Referral__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Referrals</relationshipLabel>
    <relationshipName>Partner_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>