force-app/main/default/objects/Partner_Referral__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Partner Referrals</relationshipLabel>
    <relationshipName>Partner_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>