force-app/main/default/objects/Partner_Referral__c/fields/Partner_Specific_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Specific_Type__c</fullName>
    <label>Partner Specific Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>