force-app/main/default/objects/Partner_Referral__c/fields/SFID__c.field-meta.xml
<CustomField>
    <fullName>SFID__c</fullName>
    <label>SFID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>