force-app/main/default/objects/Partner_Referral__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Qualified for Partner</fullName>
            </value>
            <value>
                <fullName>Information Shared</fullName>
            </value>
            <value>
                <fullName>Logged for Future Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>