force-app/main/default/objects/Partner_Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Partner__c</columns>
    <columns>Type__c</columns>
    <columns>SFID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>