force-app/main/default/objects/Partner_Referral__c/listViews/Mathias_Playground.listView-meta.xml
<ListView>
    <fullName>Mathias_Playground</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Partner__c</columns>
    <columns>Type__c</columns>
    <columns>SFID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>10/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
        <value>Seren</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>mlytz</value>
    </filters>
    <label>Mathias Playground</label>
</ListView>